# PromVisio

./: .dockerignore  .editorconfig  .eslintrc.json  .gitignore  .gitlab-ci.yml  .prettierrc.json  .stylelintrc.json  Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/api/: pagination.py  serializers.py  spectacular_hooks.py  urls.py  views.py  wagtail_serializers.py
backend/config/: urls.py  wsgi.py
backend/config/settings/: base.py  production.py
backend/config/templates/: base.html
backend/core/: permissions.py  services.py  views.py  wagtail_hooks.py
backend/core/blocks/: __init__.py  core.py  lists.py  technical.py  utils.py
backend/core/migrations/: 0002_alter_homepage_options_homepage_content.py  0003_feedback.py  0004_sitesettings.py  0005_gallerypage.py  0006_potentialpage_potentialpagevideo_potentialpageimage.py  0007_alter_potentialpageimage_options_and_more.py  0008_remove_gallerypage_content_galleryvideo_galleryimage.py  0009_alter_galleryvideo_url_or_iframe_and_more.py  0010_gallerypage_pagination_page_size_and_more.py  0011_articlepage.py  0012_newspage_alter_articlepage_right_side.py  0013_newspage_heading.py  0014_alter_feedback_message_and_more.py  0015_sitesettings_analytics_code.py
backend/core/models/: __init__.py  misc.py  models.py  pages.py
backend/core/templates/core/: home_page.html
backend/core/templates/emails/: create_feedback.txt
(+95 files in other folders)
